--- a/app/src/main/res/layout/pizza_recipe_item.xml
+++ b/app/src/main/res/layout/pizza_recipe_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp"
     android:layout_margin="4dp">
@@ -17,23 +17,23 @@
             android:padding="4dp" />
 
         <TextView
-            android:id="@+id/titleImageView"
+            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@id/pizzaImageView"/>
 
         <TextView
-            android:id="@+id/descriptionImageView"
+            android:id="@+id/descriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="italic"
-            android:layout_below="@id/titleImageView"
+            android:layout_below="@id/titleTextView"
             android:layout_toEndOf="@id/pizzaImageView"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
